--- a/vue_sleaflet_empty/package.json
+++ b/vue_sleaflet_empty/package.json
@@ -9,11 +9,13 @@
     "deploy": "bash deploy.sh"
   },
   "dependencies": {
+    "@supermap/iclient-leaflet": "^10.2.0",
     "ace-builds": "^1.4.12",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "js-md5": "^0.7.3",
+    "leaflet": "^1.7.1",
     "vue": "^2.6.11",
     "vue-amap": "^0.5.10",
     "vue-i18n": "^8.25.0",
